--- a/index.html
+++ b/index.html
@@ -1,222 +1,131 @@
+<!-- ============================= -->
+<!-- index.html (LISTO PARA GITHUB) -->
+<!-- ============================= -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Uber Pro GPS</title>
-
-<script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
-
-<style>
-body{
-  margin:0;
-  padding:0;
-  font-family:-apple-system, BlinkMacSystemFont, system-ui;
-  background:radial-gradient(circle at top,#020617,#000);
-  color:#fff;
-  display:flex;
-  justify-content:center;
-}
-
-.card{
-  width:100%;
-  max-width:420px;
-  margin:16px;
-  padding:18px;
-  border-radius:20px;
-  background:#020617;
-  position:relative;
-  box-shadow:0 0 0 1px rgba(148,163,184,.15),
-             0 30px 60px rgba(0,0,0,.7);
-  animation:fadeIn .8s ease;
-}
-
-.card::before{
-  content:"";
-  position:absolute;
-  inset:-2px;
-  border-radius:22px;
-  background:linear-gradient(120deg,#22c55e,#38bdf8,#22c55e);
-  z-index:-1;
-  animation:borderGlow 6s linear infinite;
-}
-
-@keyframes borderGlow{
-  0%{filter:hue-rotate(0deg)}
-  100%{filter:hue-rotate(360deg)}
-}
-
-@keyframes fadeIn{
-  from{opacity:0;transform:translateY(10px)}
-  to{opacity:1}
-}
-
-h1{
-  text-align:center;
-  font-size:20px;
-  margin-bottom:10px;
-}
-
-input[type=file]{
-  width:100%;
-  margin-top:10px;
-}
-
-img{
-  width:100%;
-  max-height:35vh;
-  object-fit:contain;
-  border-radius:14px;
-  margin-top:12px;
-  background:#000;
-}
-
-button{
-  width:100%;
-  padding:15px;
-  margin-top:12px;
-  border-radius:14px;
-  border:none;
-  font-size:16px;
-  font-weight:600;
-  background:#22c55e;
-  color:#000;
-}
-
-button.secondary{background:#38bdf8}
-button.gray{background:#64748b;color:#fff}
-button:disabled{opacity:.4}
-
-.status{
-  margin-top:10px;
-  font-size:14px;
-  color:#94a3b8;
-}
-
-.coords{
-  margin-top:10px;
-  padding:10px;
-  border-radius:12px;
-  background:#020617;
-  border:1px solid rgba(148,163,184,.15);
-}
-
-.history{
-  margin-top:12px;
-  font-size:14px;
-  color:#94a3b8;
-}
-
-/* Consola */
-#debug{
-  margin-top:12px;
-  font-size:12px;
-  background:#000;
-  padding:8px;
-  border-radius:10px;
-  max-height:120px;
-  overflow:auto;
-}
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Uber Pro GPS</title>
+  <style>
+    body{font-family:-apple-system,Helvetica,Arial;background:#0f172a;color:#fff;margin:0;padding:20px}
+    .card{background:#020617;border-radius:16px;padding:20px;box-shadow:0 20px 40px rgba(0,0,0,.4)}
+    button{width:100%;padding:16px;border-radius:14px;border:none;background:#22c55e;color:#000;font-size:17px;font-weight:600;margin-top:14px}
+    button.secondary{background:#38bdf8}
+    button.gray{background:#64748b;color:#fff}
+    #log{margin-top:16px;font-size:14px;color:#94a3b8;white-space:pre-line}
+    img{width:100%;border-radius:12px;margin-top:12px}
+    .title{font-family:Menlo,Consolas,monospace;font-size:28px;text-align:center;color:#22c55e;text-shadow:0 0 8px #22c55e,0 0 16px #22c55e;animation:pulse 2s infinite}
+  @keyframes pulse{0%{text-shadow:0 0 6px #22c55e}50%{text-shadow:0 0 18px #22c55e}100%{text-shadow:0 0 6px #22c55e}}
 </style>
 </head>
-
 <body>
-<div class="card">
-<h1>🚗 Uber Pro GPS</h1>
+  <div class="card">
+    <h2 class="title">Uber Pro GPS</h2>
+    <input type="file" id="fileInput" accept="image/*" />
+    <img id="preview" style="display:none" />
 
-<input type="file" id="fileInput" accept="image/*">
-<img id="preview">
+    <button onclick="analyzeImage()">Analizar trayecto</button>
+    <button class="secondary" onclick="navigatePro()">Navegar PRO</button>
 
-<button id="analyzeBtn">Analizar Trayecto</button>
+    <div id="log"></div>
+  </div>
 
-<div class="status" id="status">Estado: esperando imagen</div>
-
-<div class="coords" id="coords">
-Latitud: —<br>Longitud: —<br>App: —
-</div>
-
-<button id="navigateBtn" class="secondary" disabled>Navegar PRO</button>
-
-<div class="history" id="history"></div>
-
-<div id="debug"><b>DEBUG:</b><br></div>
-</div>
-
+<script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
 <script>
-/* ================= DEBUG ================= */
-const debug = msg=>{
-  document.getElementById("debug").innerHTML+=msg+"<br>";
+let currentCoords = null;
+
+const fileInput = document.getElementById('fileInput');
+const preview = document.getElementById('preview');
+const logBox = document.getElementById('log');
+
+fileInput.onchange = e => {
+  const file = e.target.files[0];
+  if(!file) return;
+  preview.src = URL.createObjectURL(file);
+  preview.style.display = 'block';
+  log('Imagen cargada, lista para analizar');
 };
 
-/* ================= VARS ================= */
-let lat=null,lng=null,appDetectada="—";
-
-/* ================= IMAGE ================= */
-fileInput.onchange=e=>{
-  const f=e.target.files[0];
-  if(!f)return;
-  preview.src=URL.createObjectURL(f);
-  status.textContent="Estado: Imagen preparada para OCR";
-  debug("Imagen cargada");
-};
-
-/* ================= OCR ================= */
-analyzeBtn.onclick=async()=>{
-  status.textContent="Estado: OCR en proceso…";
+async function analyzeImage(){
+  if(!fileInput.files[0]){ log('Primero selecciona una imagen'); return; }
+  log('Analizando imagen…');
   try{
-    const r=await Tesseract.recognize(preview.src,"eng");
-    const t=r.data.text;
-    debug("Texto OCR capturado");
-
-    if(/uber/i.test(t)) appDetectada="Uber";
-    if(/didi/i.test(t)) appDetectada="Didi";
-
-    const m=t.match(/(-?\d{1,2}\.\d+)[,\s]+(-?\d{1,3}\.\d+)/);
-    if(!m) throw "Sin coordenadas";
-
-    lat=m[1]; lng=m[2];
-
-    coords.innerHTML=`
-      Latitud: <b>${lat}</b><br>
-      Longitud: <b>${lng}</b><br>
-      App: <b>${appDetectada}</b>
-    `;
-
-    guardarHistorial();
-    navigateBtn.disabled=false;
-    status.textContent="Estado: Coordenadas detectadas";
+    const { data:{ text } } = await Tesseract.recognize(fileInput.files[0],'eng');
+    const match = text.match(/(-?\d{1,2}\.\d+)\s*,\s*(-?\d{1,3}\.\d+)/);
+    if(!match) throw new Error('No se detectaron coordenadas');
+    currentCoords = `${match[1]},${match[2]}`;
+    await navigator.clipboard.writeText(currentCoords);
+    log('Coordenadas detectadas y copiadas:\n'+currentCoords);
   }catch(e){
-    debug("ERROR OCR");
-    status.textContent="Error al analizar imagen";
+    console.error(e);
+    log('Error al analizar imagen');
   }
-};
-
-/* ================= HISTORIAL ================= */
-function guardarHistorial(){
-  const h=JSON.parse(localStorage.getItem("historial")||"[]");
-  h.unshift({lat,lng,app:appDetectada,fecha:new Date().toLocaleString()});
-  localStorage.setItem("historial",JSON.stringify(h.slice(0,5)));
-  mostrarHistorial();
 }
 
-function mostrarHistorial(){
-  const h=JSON.parse(localStorage.getItem("historial")||"[]");
-  history.innerHTML="<b>Historial:</b><br>"+h.map(x=>
-    `• ${x.app} → ${x.lat},${x.lng}`
-  ).join("<br>");
-}
-mostrarHistorial();
+async function navigatePro(){
+  if(!currentCoords){ log('Primero analiza una imagen'); return; }
 
-/* ================= NAVEGAR ================= */
-navigateBtn.onclick=()=>{
-  const google=`https://maps.google.com/?q=${lat},${lng}`;
-  if(window.Capacitor){
-    window.location.href=`com.sygic.aura://coordinate|${lat},${lng}`;
-  }else{
-    alert("Sygic directo solo disponible en App iOS.\nSe abrirá Google Maps.");
-    window.open(google,"_blank");
+  const sygicUrl = `com.sygic.aura://coordinate|${currentCoords}`;
+  const googleUrl = `https://maps.google.com/?q=${currentCoords}`;
+
+  // iOS App (Capacitor)
+  if(window.Capacitor && window.Capacitor.Plugins?.App){
+    try{
+      await Capacitor.Plugins.App.openUrl({ url: sygicUrl });
+      log('Abriendo Sygic…');
+      return;
+    }catch(e){
+      log('Sygic no respondió, abriendo Google Maps');
+      await Capacitor.Plugins.App.openUrl({ url: googleUrl });
+      return;
+    }
   }
-};
+
+  // Web fallback
+  log('Sygic directo solo disponible en App iOS. Se abrirá Google Maps');
+  window.location.href = googleUrl;
+}
+
+
+function log(t){ logBox.innerText = t; }
 </script>
 </body>
 </html>
+
+
+<!-- ============================= -->
+<!-- package.json -->
+<!-- ============================= -->
+{
+  "name": "uber-pro-gps",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "build": "",
+    "ios": "npx cap sync ios"
+  },
+  "dependencies": {
+    "@capacitor/core": "latest",
+    "@capacitor/ios": "latest"
+  }
+}
+
+
+<!-- ============================= -->
+<!-- capacitor.config.json -->
+<!-- ============================= -->
+{
+  "appId": "com.uberprogps.app",
+  "appName": "Uber Pro GPS",
+  "webDir": "./",
+  "bundledWebRuntime": false
+}
+
+
+<!-- ============================= -->
+<!-- COMANDOS iOS -->
+<!-- ============================= -->
+# npm install
+# npx cap add ios
+# npx cap open ios
